@@ -1655,9 +1655,10 @@ typedef struct {
 /** Persistent state for an onion router, as saved to disk. */
 typedef struct {
   uint32_t _magic;
+  /** True iff this state has been changed since it was last read/written
+   * to the disk. */
   int dirty;
 
-  /* XXXX These options aren't actually attached to anything yet. */
   time_t LastWritten;
   time_t AccountingIntervalStart;
   uint64_t AccountingBytesReadInInterval;
@@ -2261,7 +2262,7 @@ int accounting_is_enabled(or_options_t *options);
 void configure_accounting(time_t now);
 void accounting_run_housekeeping(time_t now);
 void accounting_add_bytes(size_t n_read, size_t n_written, int seconds);
-int accounting_record_bandwidth_usage(time_t now);
+int accounting_record_bandwidth_usage(time_t now, or_state_t *state);
 void hibernate_begin_shutdown(void);
 int we_are_hibernating(void);
 void consider_hibernation(time_t now);
